# Lab2

./: BasicMultiplication.cpp  BasicMultiplication.h  CMakeLists.txt  KaratsubaMultiplication.cpp  KaratsubaMultiplication.h  LehmerPrimeTest.cpp  LehmerPrimeTest.h  LongValue.cpp  LongValue.h  LongValue1.h  Multiplication.h  PrimeTest.h  SchonhageStrassenMultiplication.cpp  SchonhageStrassenMultiplication.h  ToomCookMultiplication.cpp  ToomCookMultiplication.h  main.cpp
